log/build_2025-03-11_09-31-50/my_py_pkg/stderr.log
  File "/home/abhilash-ts434/Documents/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/battery_node.py", line 3
    from my_robot_interfaces.msg import 
                                        ^
SyntaxError: invalid syntax

